@@ -1,3 +1,8 @@
+
+2008-12-03  Martin Kutschker  <masi@typo3.org>
+
+	* Fixed bug #6415: preg_replace error on PHP 5.2 sometimes resulting in empty pages (thanks to Francois Suter)
+
 2008-12-02  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9878: htmlArea RTE: js error may be raised when loading through IRRE Ajax call
